--- a/examples/tutorial/java/part7/build.gradle
+++ b/examples/tutorial/java/part7/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'hello.PostgreSQLJDBC'
+mainClassName = 'postgresclient.PostgreSQLJDBC'
 
 repositories {
     mavenCentral()
